Removed bug in align-middle in styles.css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -175,9 +175,6 @@ h3 {
 
 .align-middle{
     vertical-align: bottom;
-    float:none
-    padding-left: 55px;
-    padding-top: 62px;
 }
 
 .mycard{
